manifests/prod/s3/EndpointSlice-s3.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: s3
  name: s3
  namespace: s3
ports:
  - name: http
    port: 9000
    protocol: TCP
