manifests/prod/s3/Service-s3.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3
  namespace: s3
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9000
  type: ClusterIP
